@@ -1,3 +1,7 @@
+1999-03-21  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>
+
+	* FvwmGtk/FvwmGtk.c: Implement option menus. 
+
 Sat Mar 20 14:55:15 1999  DanEspen  <dje@blue>
 
 	* FvwmTalk: If I did this right, the FvwmTalk directory should
